
=== ppracer 0.5 alpha2 ===

2005-11-03  Volker Stroebel <volker@planetpenguin.de>
	* src/fps.* src/* data/config.nut.in
	added max fps for gui and racing

2005-11-02  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	replaced several macros with inline functions
	removed several unused macros
	code cleanups

2005-11-01  Volker Stroebel <volker@planetpenguin.de>
	* src/elements.* src/course_load.cpp
	added simple scale and rotation support for models

2005-10-31  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	some scary cleanups

	* src/ppogl/ui/frame.*
	removed scary frame widget
	
	* src/paused.*
	replaced scary frame widget with dark scary background
	
	* src/*
	fixed scary build errors
	fixed scary build problems w/o SDL_mixer
	fixed scary build problems w/ gcc 2.95

2005-10-30  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/audio/audiomgr.cpp
	fix memleak in destructor
	
	* src/track_marks.*
	fixed uninitialized values
	fixed possible gpf
	cleanups
	
	* src/ppogl/base/errors.cpp
	don't use rdbuf to set logfile
	
	* src/ppogl/base/signal.*
	added sinal.cpp
	moved some code to signal.cpp

2005-10-28  Volker Stroebel <volker@planetpenguin.de>
	* src/quadtree.* src/gameconfig.* data/config.nut.in
	removed settings for terrain blending
	
	* src/quadtree.cpp course_render.cpp
	cleanups

2005-10-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/sg/vnc.* src/course_load.* src/quadtree.*
	added class VNCArray
	changed code to use the new class
	
	* src/ppogl/base/vec* src/ppogl/base/color.*
	removed unused code
	
	* src/tux_shadow.*
	cleanups
	
	* src/ppogl/base/glwrappers.h
	use vector/array ops where possible
	
	* src/phys_sim.cpp
	removed unused code
	cleanups

2005-10-25  Volker Stroebel <volker@planetpenguin.de>
	* src/credits.cpp
	cleanups

2005-10-24  Volker Stroebel <volker@planetpenguin.de>
	* src/hier_utils.* src/hier.cpp data/models/*/model.nut
	removed unused eye values from struct SceneNode
