@@ -26,7 +26,7 @@
 #include "ppogl/sg/geoms.h"
 
 #define MIN_SPHERE_DIVISIONS 3
-#define MAX_SPHERE_DIVISIONS 16
+#define MAX_SPHERE_DIVISIONS 22
 
 bool get_scene_node(const std::string& node_name, SceneNode **node );
 
@@ -46,9 +46,11 @@ std::string set_scene_resolution(const std::string& resolution);
 std::string set_scene_node_shadow_state(const std::string& node, const std::string& state);
 
 std::string create_tranform_node(const std::string& parent, const std::string& name);
-std::string create_sphere_node(const std::string& parent_name, const std::string& child_name, double resolution);
+std::string create_sphere_node(const std::string& parent_name, const std::string& child_name, float resolution);
 
 void draw_scene_graph(const std::string& node);
 bool collide(const std::string& node, const ppogl::Polyhedron& ph);
+
+void update_scene_nodes();
 
 #endif // _HIER_H_
