@@ -1,6 +1,16 @@
 
 === ppracer 0.5 alpha2 ===
 
+2005-11-04  Volker Stroebel <volker@planetpenguin.de>
+	* src/fog.cpp src/gameconfig.*
+	cached disable_fog
+	
+	* src/ui_snow.cpp
+	fixed positions for modifications
+	
+	* src/hier.*
+	added update_scene_nodes
+
 2005-11-03  Volker Stroebel <volker@planetpenguin.de>
 	* src/fps.* src/* data/config.nut.in
 	added max fps for gui and racing
